--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-2.css">
 </head>
+
 <body>
 
     <header>
@@ -17,7 +20,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-            </label>            
+            </label>
             <div class="menu">
                 <a href="">About</a>
                 <a href="">Price</a>
@@ -52,10 +55,62 @@
                 <a class="a2" href="">Register here</a>
             </div>
         </div>
-        
+
         <div class="bg-photo">
             <img src="./img/5190435 1.png" alt="">
         </div>
     </div>
+
+
+
+
+
+
+    <div class="container-2">
+        <div class="Rectangle">
+            <div>
+                <img class="Rectangle_1" src="./img/Rectangle 10.png" alt="">
+            </div>
+            <div>
+                <img class="Rectangle_2" src="./img/Rectangle 11.png" alt="">
+            </div>
+        </div>
+        <div class="rigthBlockInfo">
+            <div class="info">
+                <p class="info_p1">About course</p>
+                <p class="info_p2">Learning Portuguese - Easy, Convenient, Thanks to Us</p>
+                <p class="info_p3">Forget about boring lessons! Our courses are developed using modern technologies and
+                    interactive tools.
+                    Learn a language at your own pace, anywhere and from any device.</p>
+                <p class="info_p4">Our experience in the field of language learning guarantees you the highest quality
+                    of
+                    education.</p>
+            </div>
+            <div class="rating">
+                <div class="rating_1">
+                    <p class="rating_1_p">78</p>
+                    <p class="rating_1_p1">Lessons to study completely</p>
+                </div>
+                <div class="rating_1">
+                    <p class="rating_1_p_bg">192</p>
+                    <p class="rating_1_p1">Graduates</p>
+                </div>
+                <div class="rating_1">
+                    <p class="rating_1_p2">26</p>
+                    <p class="rating_1_p1">Experienced teachers</p>
+                </div>
+            </div>
+            <div class="lastInfo">
+                <p>Our experience in the field of language learning guarantees you the highest quality of
+                    education.</p>
+
+                <div class="bottomRectangle">
+                    <img class="Rectangle_3" src="./img/Rectangle 11.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
