--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-2.css">
+    <link rel="stylesheet" href="./css/style-3.css">
 </head>
 
 <body>
@@ -109,6 +110,22 @@
                 </div>
             </div>
         </div>
+    </div>
+
+
+
+    <div class="container-3">
+        <div class="img-3">
+            <img src="./img/Group 7.png" alt="">
+        </div>
+        <div class="txt-3">
+            <p>Take a free test to find out
+                your language level now</p>
+        </div>
+        <form class="btnSend" action="">
+            <input type="email" name="email" id="" placeholder="Your Email">
+            <button type="button">Send</button>
+        </form>
     </div>
 
 </body>
