--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-2.css">
     <link rel="stylesheet" href="./css/style-3.css">
+    <link rel="stylesheet" href="./css/style-4.css">
+    <link rel="stylesheet" href="./css/style-5.css">
+    <link rel="stylesheet" href="./css/style-6.css">
+
 </head>
 
 <body>
@@ -127,6 +131,155 @@
             <button type="button">Send</button>
         </form>
     </div>
+
+
+    <div class="container-4">
+        <div class="cards">
+            <div class="card_img">
+                <img src="./img/Ellipse 4.png" alt="">
+            </div>
+            <p class="nameCourse">Basic online course</p>
+            <div class="div-name-card">
+                <div class="name-cards">
+                    <p class="name-card">All classes: <span class="card-description">15 lessons (2 times a week)</span>
+                    </p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Days: <span class="card-description">Monday-Tuesday or<br>
+                            Thursday-Saturday</span></p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Schedule: <span class="card-description">09:00-12:00 or 19:00-21:00</span></p>
+                </div>
+                <div class="course-card">
+                    <p>2 lessons per week</p>
+                    <p>Homework check</p>
+                    <p>Access to videos and tasks at any time</p>
+                    <p>Individual consultations and feedback via chat or email</p>
+                </div>
+            </div>
+            <div class="btn_buy">
+                <p>$ 70.50</p>
+                <a href="">Buy now</a>
+            </div>
+        </div>
+
+        <div class="cards2">
+            <p class="nameCourse1">Standart</p>
+            <div class="div-name-card">
+                <div class="name-cards">
+                    <p class="name-card">All classes: <span class="card-description">26 lessons (3 times a week)</span>
+                    </p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Days: <span class="card-description"> Monday-Tuesday-Saturday</span></p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Schedule: <span class="card-description">09:00-12:00 or 15:00-17:00</span></p>
+                </div>
+                <div class="course-card">
+                    <p>26 group classes (90 minutes each)</p>
+                    <p>Individual consultations and pronunciation correction</p>
+                    <p>Practical tasks and homework</p>
+                    <p>Access to educational materials and resources</p>
+                    <p>Conversation training with native speakers</p>
+                </div>
+            </div>
+            <div class="btn_buy">
+                <p>$ 220.00</p>
+                <a href="">Buy now</a>
+            </div>
+        </div>
+
+        <div class="cards3">
+            <p class="nameCourse2">Premium</p>
+            <div class="div-name-card">
+                <div class="name-cards">
+                    <p class="name-card">All classes: <span class="card-description"> 44 lessons (3 times a week)</span>
+                    </p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Days: <span class="card-description">We choose according to your<br>
+                            schedule</span></p>
+                </div>
+                <div class="name-cards">
+                    <p class="name-card">Schedule: <span class="card-description">At your choice</span></p>
+                </div>
+                <div class="course-card">
+                    <p>Flexible schedule to fit your schedule</p>
+                    <p>Classes are held 3 times a week</p>
+                    <p>Additional practical tasks to strengthen skills</p>
+                    <p>Individual additional classes on request</p>
+                    <p>A book as a gift</p>
+                </div>
+            </div>
+            <div class="btn_buy_premium">
+                <p>$ 70.50</p>
+                <a href="">Buy now</a>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="container-5">
+        <div class="container_block">
+            <div class="block_left">
+                <p class="Start_studying">Start studying today <br> and get a -10%</p>
+                <p class="Learn">Today only: Learn <span>Portuguese</span> Profitably! Get 10% Discount <br> on All
+                    Course
+                    Packages. Choose
+                    Quality and
+                    Efficiency in <br> Online or Face-to-face Classes</p>
+                <div class="vector">
+                    <img src="./img/Vector.png" alt="">
+                </div>
+                <div class="start_now">
+                    <input id="input" type="phone" placeholder="Enter your number">
+                    <a href="">Start now</a>
+                </div>
+            </div>
+            <div class="block_rigth">
+                <div class="block_rigth_img">
+                    <img class="Rectangle26" src="./img/Rectangle 26.png" alt="">
+                    <div class="bottom-images">
+                        <div class="raviews">
+                            <div class="rectangle_raviews">
+                                <p>156 Raviews</p>
+                                <img src="./img/Group 3.png" alt="">
+                            </div>
+                            <div class="">
+                                <img class="starts" src="./img/Frame 51.png" alt="">
+                            </div>
+                            <div class="">
+                                <img class="people" src="./img/Frame 53.png" alt="">
+                            </div>
+                            <p class="Last_review">Last review:</p>
+                            <div class="Great_courses">
+                                <img src="./img/Ellipse 15.png" alt="">
+                                <p>Great courses, accessible explanation and fun teachers!</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <img src="./img/Rectangle 27.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <footer>
+        <div class="companyInfo1">
+            <img src="./img/logoipsum-297 2.png" alt="">
+            <p class="LearningPortuguese">Learning Portuguese - Easy, Convenient, <br>Thanks to Us</p>
+            <div class="phone_numbers">
+                <p>063 890 77 87</p>
+                <p>096 990 63 77</p>
+            </div>
+        </div>
+    </footer> -->
 
 </body>
 
