--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
                 <p>Take a free test to find out
                     your language level now</p>
             </div>
-            <form class="btnSend" action="">
-                <input type="email" name="email" id="" placeholder="Your Email">
-                <button type="button">Send</button>
-            </form>
+            <div class="div_form">
+                <form class="btnSend" action="">
+                    <input type="email" name="email" id="" placeholder="Your Email">
+                    <button type="button">Send</button>
+                </form>
+            </div>
         </div>
 
 
