--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
 
         <div class="container-2">
+            <img class="Ellipse3" src="./img/Ellipse 3.png" alt="">
+            <img class="Ellipse1" src="./img/Ellipse 1.png" alt="">
             <div class="Rectangle">
                 <div>
                     <img class="Rectangle_1" src="./img/Rectangle 10.png" alt="">
