--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
 
 
         <div class="container-4">
+            <img class="Ellipse6" src="./img/Ellipse 6.png" alt="">
+            <img class="Ellipse7" src="./img/Ellipse 7.png" alt="">
+            <img class="Ellipse9" src="./img/Ellipse 9.png" alt="">
+            <img class="Ellipse2" src="./img/Ellipse 2.png" alt="">
+            <img class="Ellipse10" src="./img/Ellipse 10.png" alt="">
+            <img class="Ellipse8" src="./img/Ellipse 8.png" alt="">
+            <img class="Ellipse11" src="./img/Ellipse 11.png" alt="">
+            <img class="Ellipse12" src="./img/Ellipse 12.png" alt="">
+            <img class="Ellipse13" src="./img/Ellipse 13.png" alt="">
             <div class="cards">
                 <div class="card_img">
                     <img src="./img/Ellipse 4.png" alt="">
